# Brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_engine.py  brain_even_logic.py  engine.py
brain_games/games/: brain_calc_logic.py  brain_even_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression_logic.py  calculate.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
