[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["danilduborezov <ygra.pl@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
